[package]
name = "b579-arwah-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "b579_arwah_output"

[dependencies]
b579-arwah-support.workspace = true
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
csv.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true