[package]
name = "b579-arwah-probe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "b579_arwah_probe"

[dependencies]
b579-arwah-net.workspace = true
b579-arwah-proto.workspace = true
b579-arwah-support.workspace = true
tokio.workspace = true
async-trait.workspace = true
httparse.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
russh.workspace = true
hickory-resolver.workspace = true
regex.workspace = true
flate2.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true