[package]
name = "b579-arwah-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "b579_arwah_proto"

[dependencies]
b579-arwah-support.workspace = true
libc.workspace = true
bytes.workspace = true
byteorder.workspace = true
bitflags.workspace = true
tracing.workspace = true
thiserror.workspace = true


[build-dependencies]
cc.workspace = true