[package]
name = "b579-arwah-range"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "b579_arwah_range"

[dependencies]
b579-arwah-support.workspace = true
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true
thiserror.workspace = true